tests/snapshots/snapshots__insert_priority_chooser_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxemdo-snapshot.txt  •  15 ta DETAIL                           
                                                                                                    
 PROJECTS                  (2)  PRIORITY A  ────────────────────── priority  (A)                    
   +work             4      1 ▸ (A) Finish Q2 board deck +work     created   2026-05-01             
   +health           3              @laptop due:2026-05-06         due       2026-05-06  today      
   +finance          2      2   (A) Call dentist to reschedule     projects  +work                  
   +home             1              cleaning @phone +health        contexts  @laptop                
   +learning         1              due:2026-05-08                                                  
   +personal         1     (3)  PRIORITY B  ────────────────────── RAW                              
   +travel           1      3   (B) Review pull requests for auth                                   
                                    refactor +work @laptop         - [ ] (A) 2026-05-01 Finish Q2   
 CONTEXTS                           due:2026-05-07                 board deck +work @laptop         
   @errands          4      4 ┌ ADD TASK ────────────────────────────┐:2026-05-06                   
   @home             4        │                                      │                              
   @laptop           4        │  › Buy milk +groceries█              │                              
   @phone            3      5 │  ok · 1 +project                     │                              
                              │                                      │                              
                           (2)│  format: (A) Buy milk +shop @home due│                              
                            6 │                                      │                              
                              └──────────────────────────────────────┘                              
                            7   (C┌ PRIORITY ────────────┐s                                         
                                  │  (A)                 │                                          
                           (8)  NO│  (B)                 │────────                                  
                            8     │  (C)                 │ew                                        
                                  │  clear               │                                          
                                  │                      │                                          
                            9     │  jk move · Enter set │5                                         
                                  └──────────────────────┘                                          
                           10       Pick up dry cleaning @errands                                   
                           11       Schedule annual physical                                        
                                    @phone +health                                                  
 INSERT   Enter save · Esc normal                           15 open · 2026-05-06 · tuxemdo 2026.6.3
